# cpp-Electronic-Patient-Record

./: .gitignore  CMakeLists.txt  README.md  main.cpp
docs/: project_structure.md
src/: Menu.hpp  Patient.cpp  Patient.hpp  main.cpp
src/Admin/: Admin.cpp  Admin.hpp
src/Assistant/: Assistant.cpp  Assistant.hpp
src/Doctor/: Doctor.cpp  Doctor.hpp
src/IDs/: IDs.cpp  IDs.hpp
src/Menu/: Menu.cpp
src/Patient/: Patient.cpp  Patient.hpp
src/User/: User.cpp  User.hpp
src/Utils/: UserID.cpp  UserID.hpp  Utils.cpp  Utils.hpp
src/application/: EprApplication.cpp  EprApplication.hpp
src/application/ports/: IPatientRepository.hpp  ISystemRepository.hpp  IUserProvisioningRepository.hpp  IUserRepository.hpp
src/application/usecase/: AppointmentReviewService.cpp  AppointmentReviewService.hpp  AuthService.cpp  AuthService.hpp  LoginDecisionUseCase.cpp  LoginDecisionUseCase.hpp  PatientRecordQueryService.cpp  PatientRecordQueryService.hpp  PatientWriteService.cpp  PatientWriteService.hpp  SystemBootstrapUseCase.cpp  SystemBootstrapUseCase.hpp  UserProfileQueryService.cpp  UserProfileQueryService.hpp  UserProvisioningService.cpp  UserProvisioningService.hpp  UserRecordService.cpp  UserRecordService.hpp  UserSessionService.cpp  UserSessionService.hpp
src/common/result/: ErrorCodes.hpp  ErrorSources.hpp  Result.hpp
src/common/util/Utils/: Utils.cpp
src/domain/model/Assistant/: Assistant.cpp  Assistant.hpp
src/domain/model/Doctor/: Doctor.cpp  Doctor.hpp
src/domain/model/Patient/: Patient.cpp  Patient.hpp
src/domain/model/User/: User.cpp  User.hpp
src/infrastructure/persistence/: FilePatientRepository.cpp  FilePatientRepository.hpp  FileSystemRepository.cpp  FileSystemRepository.hpp  FileUserProvisioningRepository.cpp  FileUserProvisioningRepository.hpp  FileUserRepository.cpp  FileUserRepository.hpp
src/infrastructure/persistence/IDs/: IDs.cpp  IDs.hpp
src/ui/cli/: AssistantConsole.cpp  AssistantMenuController.hpp  ConsoleIO.cpp  ConsoleIO.hpp  DoctorConsole.cpp  DoctorMenuController.hpp  EprCliApplication.cpp  EprCliApplication.hpp  MainMenuCli.cpp  MainMenuCli.hpp  PatientConsole.cpp  PatientMenuController.hpp  UserConsole.cpp  UserProvisioningInputCli.cpp  UserProvisioningInputCli.hpp  main.cpp
src/ui/cli/Admin/: Admin.cpp  Admin.hpp
tests/: PatientWriteServiceSmokeTest.cpp  README.md  TestMain.cpp  UserRecordServiceSmokeTest.cpp
